# gluesql

./: Cargo.toml
.zed/: settings.json
storages/sanakirja-storage/: Cargo.toml
storages/sanakirja-storage/src/: error.rs  lib.rs  pristine.rs  small_string.rs  store.rs
storages/sanakirja-storage/src/types/: l64.rs  mod.rs  serializer.rs  small_string.rs
storages/workers-kv-storage/src/: lib.rs
storages/workers-storage/: Cargo.toml  README.md
storages/workers-storage/src/: error.rs  lib.rs  store.rs
