[package]
name = "sanakirja-storage"
edition = "2021"
version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
