[package]
name = "gluesql-workers-storage"
authors = ["Und3fy <me@und3fy.dev>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
gluesql-core.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
gloo-storage = "0.2.2"
uuid = { version = "1.2.2", features = ["v4"] }
web-sys = { version = "0.3.60" }
worker = "0.0.17"

[dev-dependencies]
test-suite.workspace = true
wasm-bindgen-test = "0.3.33"
